// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test screenshots for all components matches Calculator snapshot 1`] = `
<main
  className="Hero"
>
  <div
    className="container"
  >
    <div
      className="buttons"
    >
      <div
        className="text"
      >
        0
      </div>
      <button
        className="btn btn--primary"
        onClick={[Function]}
        type="button"
      >
        AC
      </button>
      <button
        className="btn btn--primary"
        onClick={[Function]}
        type="button"
      >
        +/-
      </button>
      <button
        className="btn btn--primary"
        onClick={[Function]}
        type="button"
      >
        %
      </button>
      <button
        className="btn btn--sec"
        onClick={[Function]}
        type="button"
      >
        ÷
      </button>
      <button
        className="btn btn--primary"
        onClick={[Function]}
        type="button"
      >
        7
      </button>
      <button
        className="btn btn--primary"
        onClick={[Function]}
        type="button"
      >
        8
      </button>
      <button
        className="btn btn--primary"
        onClick={[Function]}
        type="button"
      >
        9
      </button>
      <button
        className="btn btn--sec"
        onClick={[Function]}
        type="button"
      >
        x
      </button>
      <button
        className="btn btn--primary"
        onClick={[Function]}
        type="button"
      >
        4
      </button>
      <button
        className="btn btn--primary"
        onClick={[Function]}
        type="button"
      >
        5
      </button>
      <button
        className="btn btn--primary"
        onClick={[Function]}
        type="button"
      >
        6
      </button>
      <button
        className="btn btn--sec"
        onClick={[Function]}
        type="button"
      >
        -
      </button>
      <button
        className="btn btn--primary"
        onClick={[Function]}
        type="button"
      >
        1
      </button>
      <button
        className="btn btn--primary"
        onClick={[Function]}
        type="button"
      >
        2
      </button>
      <button
        className="btn btn--primary"
        onClick={[Function]}
        type="button"
      >
        3
      </button>
      <button
        className="btn btn--sec"
        onClick={[Function]}
        type="button"
      >
        +
      </button>
      <button
        className="btn btn--zero"
        onClick={[Function]}
        type="button"
      >
        0
      </button>
      <button
        className="btn btn--primary"
        onClick={[Function]}
        type="button"
      >
        .
      </button>
      <button
        className="btn btn--sec"
        onClick={[Function]}
        type="button"
      >
        =
      </button>
    </div>
  </div>
</main>
`;

exports[`test screenshots for all components matches Home snapshot 1`] = `
<section
  className="homepage"
>
  <h2>
    Welcome to our page!
  </h2>
  <p>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit, tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit, quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam recusandae alias error harum maxime adipisci amet laborum.
    <br />
    <br />
    Minima nesciunt dolorem! Officiis iure rerum voluptates a cumque velit quibusdam sed amet tempora. Sit laborum ab, eius fugit doloribus tenetur fugiat, temporibus enim commodi iusto libero magni deleniti quod quam consequuntur! Commodi minima excepturi repudiandae velit hic maxime doloremque. Quaerat provident commodi consectetur veniam similique ad earum omnis ipsum saepe, voluptas, hic voluptates pariatur est explicabo fugiat, dolorum eligendi quam cupiditate excepturi mollitia maiores labore suscipit quas? Nulla, placeat. Voluptatem quaerat non architecto ab laudantium modi minima sunt esse temporibus sint culpa, recusandae aliquam numquam totam ratione voluptas quod exercitationem fuga. Possimus quis earum veniam quasi aliquam eligendi, placeat qui corporis!
  </p>
</section>
`;

exports[`test screenshots for all components matches Mathematics snapshot 1`] = `
<section
  className="calculator-page"
>
  <div
    className="calculator-content"
  >
    <h2>
      Let's do some math!
    </h2>
  </div>
  <main
    className="Hero"
  >
    <div
      className="container"
    >
      <div
        className="buttons"
      >
        <div
          className="text"
        >
          0
        </div>
        <button
          className="btn btn--primary"
          onClick={[Function]}
          type="button"
        >
          AC
        </button>
        <button
          className="btn btn--primary"
          onClick={[Function]}
          type="button"
        >
          +/-
        </button>
        <button
          className="btn btn--primary"
          onClick={[Function]}
          type="button"
        >
          %
        </button>
        <button
          className="btn btn--sec"
          onClick={[Function]}
          type="button"
        >
          ÷
        </button>
        <button
          className="btn btn--primary"
          onClick={[Function]}
          type="button"
        >
          7
        </button>
        <button
          className="btn btn--primary"
          onClick={[Function]}
          type="button"
        >
          8
        </button>
        <button
          className="btn btn--primary"
          onClick={[Function]}
          type="button"
        >
          9
        </button>
        <button
          className="btn btn--sec"
          onClick={[Function]}
          type="button"
        >
          x
        </button>
        <button
          className="btn btn--primary"
          onClick={[Function]}
          type="button"
        >
          4
        </button>
        <button
          className="btn btn--primary"
          onClick={[Function]}
          type="button"
        >
          5
        </button>
        <button
          className="btn btn--primary"
          onClick={[Function]}
          type="button"
        >
          6
        </button>
        <button
          className="btn btn--sec"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <button
          className="btn btn--primary"
          onClick={[Function]}
          type="button"
        >
          1
        </button>
        <button
          className="btn btn--primary"
          onClick={[Function]}
          type="button"
        >
          2
        </button>
        <button
          className="btn btn--primary"
          onClick={[Function]}
          type="button"
        >
          3
        </button>
        <button
          className="btn btn--sec"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
        <button
          className="btn btn--zero"
          onClick={[Function]}
          type="button"
        >
          0
        </button>
        <button
          className="btn btn--primary"
          onClick={[Function]}
          type="button"
        >
          .
        </button>
        <button
          className="btn btn--sec"
          onClick={[Function]}
          type="button"
        >
          =
        </button>
      </div>
    </div>
  </main>
</section>
`;

exports[`test screenshots for all components matches Quote snapshot 1`] = `
<section
  className="quote-page"
>
  <p />
  <h3>
    - 
  </h3>
</section>
`;
